test/error/error.input65.zc
Enum type redeclared:fred on line 2
